--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,33 @@ a {
     color: #081F32;
 }
 
+.form {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: rgba(8, 31, 50, 0.6);
+}
+
+.input {
+    font-family: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    color: inherit;
+}
+
+.input::placeholder {
+    font-family: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    color: rgba(8, 31, 50, 0.5);
+}
+
 .btn {
     cursor: pointer;
     border: none;
@@ -75,18 +102,6 @@ a {
     background-color: #144f7e;
 }
 
-.input {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 150%;
-    color: rgba(8, 31, 50, 0.5);
-    padding: 15px 30px;
-    border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: transparent;
-}
 
 .subtitle {
     text-transform: uppercase;
@@ -503,6 +518,54 @@ a {
     color: rgba(8, 31, 50, 0.7);
 }
 
+/*IN-TOUCH*/
+
+.in-touch {
+    text-align: center;
+    padding: 70px 0 140px;
+}
+
+.in-touch__subtitle {
+    margin-bottom: 20px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 150%;
+    color: rgba(8, 31, 50, 0.8);
+    text-transform: uppercase;
+}
+
+.in-touch__title {
+    margin-bottom: 65px;
+}
+
+.in-touch__form {
+    max-width: 569px;
+    margin: 0 auto;
+}
+
+.form-email {
+    display: flex;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.form-email__label {
+    width: 100%;
+}
+
+.form-email__field {
+    padding: 15px 30px;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
+    height: 100%;
+}
+
+.form-btn {
+    padding: 15px 40px;
+    font-family: inherit;
+    line-height: inherit;
+}
 
 
 
