--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -834,7 +834,11 @@ a {
 
 @media (max-width: 767.25px) {
     .in-touch {
-        padding: 35px 0 70px;
+        padding: 35px 0;
+    }
+
+    .in-touch__title {
+        margin-bottom: 30px;
     }
 
     .form-email__field {
